--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
     rel="stylesheet"/>
     <link rel="stylesheet" href="style.css">
-    <title>World-Weather-web</title>
+    <title>World-Weather-Web</title>
 </head>
 <body>
        
